--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -20,10 +24,18 @@ logo {
    height: 50px;
 }
 
-wrapper {
-   display: grid;
-   grid-template-columns: 250px 250px;
+img {
+   max-width: 40%;
+   height: auto;
 }
-subNavRight {
-   right: 0;
+
+@layer components {
+   .card {
+      background-color: theme('colors.black');
+      color: white;
+      border-radius: theme('borderRadius.lg');
+      padding: theme('spacing.6');
+      box-shadow: theme('boxShadow.xl');
+   }
+   /* ... */
 }
